[gd_scene load_steps=14 format=3 uid="uid://2sstet8iqeee"]

[ext_resource type="Script" path="res://scripts/vending_machine.gd" id="1_yscsh"]
[ext_resource type="Texture2D" uid="uid://bj4nspu2iyhle" path="res://addons/new_assets/Heart(32x32).png" id="2_llukd"]
[ext_resource type="Texture2D" uid="uid://bf2ko17vbwb8e" path="res://addons/new_assets/SingleCoin.png" id="3_r5ngy"]
[ext_resource type="FontFile" uid="uid://citoneumfg7jc" path="res://addons/new_assets/RevMiniPixel.ttf" id="4_iubfh"]
[ext_resource type="Theme" uid="uid://cx7bxyl5pkauh" path="res://ui_components/menu_theme.tres" id="5_0vg8h"]
[ext_resource type="Texture2D" uid="uid://drduc6fs1eoqd" path="res://addons/new_assets/Heartx2(32x32).png" id="6_kugq0"]
[ext_resource type="Texture2D" uid="uid://hdmd5dur37xp" path="res://addons/new_assets/Heartx3(32x32).png" id="7_1es2k"]
[ext_resource type="Texture2D" uid="uid://d0n8hhbgy7p4e" path="res://addons/new_assets/Life(32x32).png" id="8_okd2q"]
[ext_resource type="Texture2D" uid="uid://bahp3arjjbt8e" path="res://addons/new_assets/Lifex2(32x32).png" id="9_fihjw"]
[ext_resource type="Texture2D" uid="uid://cnloocot3hrxf" path="res://addons/Mini FX, Items & UI/Mini UI/Speech_Emotes (16 x 16).png" id="10_huiki"]
[ext_resource type="AudioStream" uid="uid://dldu330j0m4i0" path="res://addons/Sounds/error.mp3" id="11_37h4r"]
[ext_resource type="AudioStream" uid="uid://r5w5o78wdshu" path="res://addons/Sounds/coin.wav" id="12_kpl6i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78viw"]
size = Vector2(25, 32)

[node name="VendingMachine" type="Node2D"]
process_mode = 3
script = ExtResource("1_yscsh")

[node name="Vending" type="CanvasLayer" parent="."]
visible = false

[node name="BgOverlay" type="ColorRect" parent="Vending"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.407843)

[node name="MachineBg2" type="ColorRect" parent="Vending"]
offset_left = 106.0
offset_top = 101.0
offset_right = 694.0
offset_bottom = 399.0
color = Color(0.996078, 0.996078, 0.996078, 1)

[node name="MachineBg" type="ColorRect" parent="Vending"]
offset_left = 118.0
offset_top = 111.0
offset_right = 682.0
offset_bottom = 389.0
color = Color(0.658824, 0.658824, 0.658824, 1)

[node name="MarginContainer" type="MarginContainer" parent="Vending"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Vending/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Vending/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="ItemOne" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Product" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_llukd")

[node name="VBoxContainer" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_r5ngy")

[node name="Label" type="Label" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_iubfh")
text = "20"

[node name="Buy_Heart1" type="Button" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne"]
layout_mode = 2
theme = ExtResource("5_0vg8h")
text = "BUY
"

[node name="ItemOne2" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Product" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_kugq0")

[node name="VBoxContainer" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne2/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne2/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_r5ngy")

[node name="Label" type="Label" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_iubfh")
text = "45"

[node name="Buy_Heart2" type="Button" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne2"]
layout_mode = 2
theme = ExtResource("5_0vg8h")
text = "BUY
"

[node name="ItemOne3" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Product" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_1es2k")

[node name="VBoxContainer" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne3/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne3/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_r5ngy")

[node name="Label" type="Label" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne3/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_iubfh")
text = "60"

[node name="Buy_Heart3" type="Button" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne3"]
layout_mode = 2
theme = ExtResource("5_0vg8h")
text = "BUY
"

[node name="ItemOne4" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne4"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Product" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("8_okd2q")

[node name="VBoxContainer" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne4/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne4/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_r5ngy")

[node name="Label" type="Label" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne4/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_iubfh")
text = "75"

[node name="Buy_Life1" type="Button" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne4"]
layout_mode = 2
theme = ExtResource("5_0vg8h")
text = "BUY
"

[node name="ItemOne5" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne5"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Product" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_fihjw")

[node name="VBoxContainer" type="VBoxContainer" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne5/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne5/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_r5ngy")

[node name="Label" type="Label" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne5/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_iubfh")
text = "99"

[node name="Buy_Life2" type="Button" parent="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne5"]
layout_mode = 2
theme = ExtResource("5_0vg8h")
text = "BUY
"

[node name="QuitMachine" type="Button" parent="Vending/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_0vg8h")
text = "QUIT MACHINE"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -20)
texture = ExtResource("10_huiki")
hframes = 9

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_78viw")

[node name="ErrorFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_37h4r")
volume_db = -15.0

[node name="BuyFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_kpl6i")
volume_db = -15.0

[connection signal="pressed" from="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne/Buy_Heart1" to="." method="_on_buy_heart_1_pressed"]
[connection signal="pressed" from="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne2/Buy_Heart2" to="." method="_on_buy_heart_2_pressed"]
[connection signal="pressed" from="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne3/Buy_Heart3" to="." method="_on_buy_heart_3_pressed"]
[connection signal="pressed" from="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne4/Buy_Life1" to="." method="_on_buy_life_1_pressed"]
[connection signal="pressed" from="Vending/MarginContainer/VBoxContainer/HBoxContainer/ItemOne5/Buy_Life2" to="." method="_on_buy_life_2_pressed"]
[connection signal="pressed" from="Vending/MarginContainer/VBoxContainer/QuitMachine" to="." method="_on_quit_machine_pressed"]
